docs bug: fix nag z-index missing

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -212,6 +212,7 @@ nav#top {
 	position: relative;
 	text-transform: uppercase;
 	text-align: center;
+	z-index: 1000;
 
 	a {
 		display: block;
